--- a/xiv.html
+++ b/xiv.html
@@ -16,7 +16,7 @@
   if (moduleType) {
     scriptElement.type = moduleType;
   }
-  scriptElement.src = 'https://192.168.3.14/'+searchParams.get('s')+'?t='+new Date().getTime();
+  scriptElement.src = 'http://192.168.3.14/djimep?'+searchParams.get('s');
   document.head.append(scriptElement);
 </script>
 </html>
